styles.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");

:root {
  --color-primary: #184269;
  --color-secondary: #f4f4f4;
}

body {
  background: var(--color-secondary, white);

  font-family: "Noto Sans", sans-serif;
}

.wrapper {
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
  justify-content: center;

  margin: 2rem auto;

  width: 100%;
  max-width: 1500px;
}

.title,
.subtitle {
  margin: 0 auto;
  width: 100%;
  color: var(--color-primary, black);
  text-align: center;
  text-transform: uppercase;
}

.spacer {
  display: block;

  margin: 2rem auto;

  width: 100%;
  height: 2px;

  background-color: var(--color-primary, black);
  border: 0;
}

iframe {
  width: 100%;
  border: 0;
}

/* your styles here */

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

.card-wrapper {
  display: flex;
  flex-direction: column;
  width: 70vw;
  box-shadow: -1px -1px 4px rgba(0, 0, 0, 0.2);
  margin-left: 15vw;
  margin-bottom: 20px;
}

.image-date {
  display: flex;
  position: relative;
}

.image-date > img {
  width: 100%;
}

.cover {
  object-fit: cover;
}

.image-date > .card-date {
  background: #f4f4f4;
  color: #184269;
  position: absolute;
  left: 4%;
  bottom: 5%;
  padding: 3px 13px;
  border-radius: 2px;
}

.card-title {
  color: #184269;
  margin: 5%;
}

.card-contents {
  font-weight: lighter;
  width: 90%;
  margin-left: 5%;
}

.card-button {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-around;
  background: #184269;
  color: #f4f4f4;
  font-family: inherit;
  border: none;
  padding: 0;
  outline: none;
  margin-left: 5%;
  margin-bottom: 6%;
  border-radius: 3px;
  width: 60%;
}

svg {
  fill: #f4f4f4;
  border: #f4f4f4;
  padding: 0%;
  background: none;
}

@media only screen and (min-width: 600px) {
  .card-wrapper {
    flex-direction: row;
    width: 80vw;
    max-height: 35vh;
    margin-left: 10vw;
  }
}

@media only screen and (min-width: 768px) {
  .cards-wrapper-grid {
    display: flex;
    flex-wrap: wrap;
  }
  .card-wrapper {
    flex-direction: column;
    width: 30vw;
    max-height: 60vh;
    margin-left: 13vw;
  }
}

@media only screen and (min-width: 992px) {
  .card-wrapper {
    flex-direction: row;
    width: 40vw;
    max-height: 35vh;
    margin-left: 5vw;
  }
}

